--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   injectable: ^2.5.0
   #  cannot upgrade due to conflicts
   injectable_generator: ^2.6.2
+  intl: ^0.19.0
   json_annotation: ^4.9.0
   meta: any
   models:
