--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   intl: ^0.19.0
   json_annotation: ^4.9.0
   meta: any
+  mockito: ^5.4.4
   models:
     path: core/models
   nested: ^1.0.0
