--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,12 +35,13 @@ dependencies:
   bloc_test: ^9.1.7
   collection: any
   dio: ^5.7.0
-  equatable: ^2.0.5
+  equatable: ^2.0.7
   feedback: ^3.1.0
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.6
   flutter_email_sender: ^6.0.3
+  flutter_markdown: ^0.7.4+2
   flutter_translate: ^4.1.0
   fluttertoast: ^8.2.8
   formz: ^0.8.0
@@ -77,7 +78,7 @@ dev_dependencies:
   flutter_lints: ^5.0.0
   flutter_test:
     sdk: flutter
-  json_serializable: ^6.8.0
+  json_serializable: ^6.9.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
