--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -5,6 +5,26 @@ plugins {
     id "dev.flutter.flutter-gradle-plugin"
 }
 
+def keyProperties = new Properties()
+def keyPropertiesFile = rootProject.file('key.properties')
+if (keyPropertiesFile.exists()) {
+    keyPropertiesFile.withReader('UTF-8') { reader ->
+        //noinspection GroovyAssignabilityCheck
+        keyProperties.load(reader)
+    }
+}
+
+// Debug environment variables.
+def signingKeyDebugPath = keyProperties.getProperty('dev.SIGNING_KEY_DEBUG_PATH') ?: rootProject.SIGNING_KEY_DEBUG_PATH
+def signingKeyDebugPassword = keyProperties.getProperty('dev.SIGNING_KEY_DEBUG_PASSWORD') ?: rootProject.SIGNING_KEY_DEBUG_PASSWORD
+def signingKeyDebugKey = keyProperties.getProperty('dev.SIGNING_KEY_DEBUG_KEY') ?: rootProject.SIGNING_KEY_DEBUG_KEY
+def signingKeyDebugKeyPassword = keyProperties.getProperty('dev.SIGNING_KEY_DEBUG_KEY_PASSWORD') ?: rootProject.SIGNING_KEY_DEBUG_KEY_PASSWORD
+// Release environment variables.
+def signingKeyReleasePath = keyProperties.getProperty('production.SIGNING_KEY_RELEASE_PATH') ?: rootProject.SIGNING_KEY_RELEASE_PATH
+def signingKeyReleasePassword = keyProperties.getProperty('production.SIGNING_KEY_RELEASE_PASSWORD') ?: rootProject.SIGNING_KEY_RELEASE_PASSWORD
+def signingKeyReleaseKey = keyProperties.getProperty('production.SIGNING_KEY_RELEASE_KEY') ?: rootProject.SIGNING_KEY_RELEASE_KEY
+def signingKeyReleaseKeyPassword = keyProperties.getProperty('production.SIGNING_KEY_RELEASE_KEY_PASSWORD') ?: rootProject.SIGNING_KEY_RELEASE_KEY_PASSWORD
+
 android {
     namespace = "com.turskyi.investtrack"
     compileSdk = flutter.compileSdkVersion
@@ -30,11 +50,57 @@ android {
         versionName = flutter.versionName
     }
 
+    signingConfigs {
+        production {
+            // FCI_BUILD_ID is exported by Codemagic
+            //noinspection GroovyAssignabilityCheck
+            if (System.getenv()["FCI_BUILD_ID"] != null) {
+                //noinspection GroovyAssignabilityCheck
+                storeFile file(System.getenv()["CM_KEYSTORE_PATH"])
+                //noinspection GroovyAssignabilityCheck
+                storePassword System.getenv()["CM_KEYSTORE_PASSWORD"]
+                //noinspection GroovyAssignabilityCheck
+                keyAlias System.getenv()["CM_KEY_ALIAS"]
+                //noinspection GroovyAssignabilityCheck
+                keyPassword System.getenv()["CM_KEY_PASSWORD"]
+            } else {
+                storeFile file(signingKeyReleasePath)
+                storePassword signingKeyReleasePassword
+                keyAlias signingKeyReleaseKey
+                keyPassword signingKeyReleaseKeyPassword
+            }
+        }
+
+        dev {
+            // FCI_BUILD_ID is exported by Codemagic
+            //noinspection GroovyAssignabilityCheck
+            if (System.getenv()["FCI_BUILD_ID"] != null) {
+                //noinspection GroovyAssignabilityCheck
+                storeFile file(System.getenv()["CM_KEYSTORE_PATH"])
+                //noinspection GroovyAssignabilityCheck
+                storePassword System.getenv()["CM_KEYSTORE_PASSWORD"]
+                //noinspection GroovyAssignabilityCheck
+                keyAlias System.getenv()["CM_KEY_ALIAS"]
+                //noinspection GroovyAssignabilityCheck
+                keyPassword System.getenv()["CM_KEY_PASSWORD"]
+            } else {
+                storeFile file(signingKeyDebugPath)
+                storePassword signingKeyDebugPassword
+                keyAlias signingKeyDebugKey
+                keyPassword signingKeyDebugKeyPassword
+            }
+        }
+    }
+
     buildTypes {
         release {
-            // TODO: Add your own signing config for the release build.
-            // Signing with the debug keys for now, so `flutter run --release` works.
-            signingConfig = signingConfigs.debug
+            minifyEnabled true
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'),
+                    'proguard-rules.pro'
+            signingConfig = signingConfigs.production
+        }
+        debug {
+            signingConfig = signingConfigs.dev
         }
     }
 }
