--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,3 +1,25 @@
+buildscript {
+    ext {
+        applicationId = "com.turskyi.investtrack"
+
+        getSigningProperty = { key ->
+            //noinspection GroovyAssignabilityCheck
+            def value = System.getenv(key) ?: project.findProperty("production.$key") ?: project.findProperty("dev.$key")
+            return value
+        }
+
+        SIGNING_KEY_DEBUG_PATH = getSigningProperty("SIGNING_KEY_DEBUG_PATH")
+        SIGNING_KEY_DEBUG_PASSWORD = getSigningProperty("SIGNING_KEY_DEBUG_PASSWORD")
+        SIGNING_KEY_DEBUG_KEY = getSigningProperty("SIGNING_KEY_DEBUG_KEY")
+        SIGNING_KEY_DEBUG_KEY_PASSWORD = getSigningProperty("SIGNING_KEY_DEBUG_KEY_PASSWORD")
+
+        SIGNING_KEY_RELEASE_PATH = getSigningProperty("SIGNING_KEY_RELEASE_PATH")
+        SIGNING_KEY_RELEASE_PASSWORD = getSigningProperty("SIGNING_KEY_RELEASE_PASSWORD")
+        SIGNING_KEY_RELEASE_KEY = getSigningProperty("SIGNING_KEY_RELEASE_KEY")
+        SIGNING_KEY_RELEASE_KEY_PASSWORD = getSigningProperty("SIGNING_KEY_RELEASE_KEY_PASSWORD")
+    }
+}
+
 allprojects {
     repositories {
         google()
