--- a/.github/workflows/flutter_android_ci.yml
+++ b/.github/workflows/flutter_android_ci.yml
@@ -1,12 +1,19 @@
 name: Upload Android build to App Tester.
-on: [ push ]
+on:
+  workflow_run:
+    workflows:
+      - code_quality_tests.yml
+    types:
+      - completed
 
 jobs:
-  build_apk:
-    name: Build Flutter (Android)
+  build:
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v3
 
       - name: Write google-services.json file
         run: |
