:rocket: chore: Update workflow for Android CI and code quality tests"

--- a/.github/workflows/code_quality_tests.yml
+++ b/.github/workflows/code_quality_tests.yml
@@ -1,6 +1,6 @@
-name: Code Quality
+name: Code Quality and Tests
 
-on: [ push ]
+on: [push]
 
 jobs:
   check-code-quality-and-tests:
@@ -10,21 +10,21 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - name: Setup flutter
+      - name: Setup Flutter
         uses: subosito/flutter-action@v1
         with:
           channel: stable
 
-      - name: Get packages
+      - name: Get Packages
         run: flutter pub get
 
-      - name: Check format errors
+      - name: Check Format Errors
         run: dart format --set-exit-if-changed .
 
-      - name: Check lint errors
+      - name: Check Lint Errors
         run: flutter analyze .
 
-      - name: Run tests with coverage and random order
+      - name: Run Tests with Coverage and Random Order
         run: flutter test --coverage --test-randomize-ordering-seed random
 
       - name: Very Good Coverage
@@ -32,7 +32,7 @@ jobs:
         with:
           min_coverage: 9
 
-      - name: Upload coverage reports to Codecov
+      - name: Upload Coverage Reports to Codecov
         uses: codecov/codecov-action@v4.0.1
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
