--- a/.github/workflows/flutter_android_ci.yml
+++ b/.github/workflows/flutter_android_ci.yml
@@ -1,25 +1,24 @@
-name: Upload Android build to App Tester.
+name: Upload Android Build to App Tester
+
 on:
   workflow_run:
     workflows:
-      - code_quality_tests.yml
+      - Code Quality and Tests
     types:
       - completed
 
 jobs:
-  build:
+  build_apk:
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
+    name: Build Flutter (Android)
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
+      - uses: actions/checkout@v2
       - name: Write google-services.json file
         run: |
           cd android/app
           echo $GOOGLE_SERVICES | base64 -d > google-services.json
-        shell: bash
         env:
           GOOGLE_SERVICES: ${{ secrets.GOOGLE_SERVICES }}
 
@@ -61,10 +60,12 @@ jobs:
         with:
           name: apk-build
           path: build/app/outputs/apk/release
+
   beta_apk:
-    name: Upload Android Beta version to Firebase App Distribution
-    needs: [ build_apk ]
+    name: Upload Android Beta Version to Firebase App Distribution
+    needs: build_apk
     runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v1
       - name: set up JDK 1.8
@@ -77,7 +78,7 @@ jobs:
           name: apk-build
       - name: Display structure of downloaded files
         run: ls -R
-      - name: upload artifact to Firebase App Distribution
+      - name: Upload Artifact to Firebase App Distribution
         uses: wzieba/Firebase-Distribution-Github-Action@v1
         with:
           appId: ${{secrets.FIREBASE_ANDROID_APP_ID}}
